force-app/main/default/objects/ClassificationData__c/ClassificationData__c.object-meta.xml
<CustomObject>
    <label>Classification Data</label>
    <nameField>
        <label>Classification Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifications Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>