force-app/main/default/objects/ClassificationData__c/fields/Classification_Attribute_ID__c.field-meta.xml
<CustomField>
    <fullName>Classification_Attribute_ID__c</fullName>
    <formula>CASESAFEID( ClassificationAttribute__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute ID</label>
    <type>Text</type>
</CustomField>