force-app/main/default/objects/ClassificationData__c/fields/ClassificationAttribute__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute</label>
    <referenceTo>ClassificationAttribute__c</referenceTo>
    <relationshipLabel>Classifications Data</relationshipLabel>
    <relationshipName>ClassificationsData</relationshipName>
    <type>Lookup</type>
</CustomField>