force-app/main/default/objects/ClassificationData__c/fields/ClassificationAttributeName__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeName__c</fullName>
    <formula>IF(ISPICKVAL(Account__r.CommunicationLanguage__c, &apos;nl_NL&apos;), ClassificationAttribute__r.AttributeNameNL__c, IF(ISPICKVAL(Account__r.CommunicationLanguage__c, &apos;fr&apos;), ClassificationAttribute__r.AttributeNameFR__c, IF(ISPICKVAL(Account__r.CommunicationLanguage__c, &apos;se&apos;), ClassificationAttribute__r.AttributeNameSE__c, ClassificationAttribute__r.Name)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute Name</label>
    <type>Text</type>
</CustomField>