force-app/main/default/objects/ClassificationData__c/fields/ClassificationAttributeSubValue2__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValue2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute SubValue 2</label>
    <referenceTo>ClassificationAttributeValue__c</referenceTo>
    <relationshipLabel>Classifications Data (ClassificationAttributeSubValue2)</relationshipLabel>
    <relationshipName>Classifications_Data</relationshipName>
    <type>Lookup</type>
</CustomField>