force-app/main/default/objects/ClassificationData__c/fields/ClassificationAttributeSubValue3__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValue3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute SubValue 3</label>
    <referenceTo>ClassificationAttributeValue__c</referenceTo>
    <relationshipLabel>Classifications Data (ClassificationAttributeSubValue3)</relationshipLabel>
    <relationshipName>Classifications_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>