force-app/main/default/objects/ClassificationData__c/fields/ClassificationAttributeSubValue3Name__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValue3Name__c</fullName>
    <formula>ClassificationAttributeSubValue3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute SubValue 3 Name</label>
    <type>Text</type>
</CustomField>