force-app/main/default/objects/ClassificationData__c/fields/ClassificationAttributeSubValue4__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValue4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute SubValue 4</label>
    <referenceTo>ClassificationAttributeValue__c</referenceTo>
    <relationshipLabel>Classifications Data (ClassificationAttributeSubValue4)</relationshipLabel>
    <relationshipName>Classifications_Data2</relationshipName>
    <type>Lookup</type>
</CustomField>