force-app/main/default/objects/ClassificationData__c/fields/ClassificationAttributeSubValue4Name__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeSubValue4Name__c</fullName>
    <formula>ClassificationAttributeSubValue4__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute SubValue 4 Name</label>
    <type>Text</type>
</CustomField>