force-app/main/default/objects/ClassificationData__c/fields/ClassificationAttributeValue__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeValue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Attribute Value</label>
    <referenceTo>ClassificationAttributeValue__c</referenceTo>
    <relationshipLabel>Classifications Data</relationshipLabel>
    <relationshipName>ClassificationsData</relationshipName>
    <type>Lookup</type>
</CustomField>