force-app/main/default/objects/ClassificationData__c/fields/ClassificationAttributeValueName__c.field-meta.xml
<CustomField>
    <fullName>ClassificationAttributeValueName__c</fullName>
    <formula>ClassificationAttributeValue__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Attribute Value</label>
    <type>Text</type>
</CustomField>