force-app/main/default/objects/ClassificationData__c/fields/ClassificationType__c.field-meta.xml
<CustomField>
    <fullName>ClassificationType__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact__c)),&quot;Contact&quot;,IF(NOT(ISBLANK( Account__c)),&quot;Account&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Type</label>
    <type>Text</type>
</CustomField>