force-app/main/default/objects/ClassificationData__c/fields/ContactAccountId__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store the Account ID for Contacts that were linked to those Accounts in the old IL environment</description>
    <label>ContactAccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Classifications Data (ContactAccountId)</relationshipLabel>
    <relationshipName>ClassificationsData</relationshipName>
    <type>Lookup</type>
</CustomField>