force-app/main/default/objects/ClassificationData__c/fields/ContactClassificationAccount__c.field-meta.xml
<CustomField>
    <fullName>ContactClassificationAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account of the Contact in the Classification</description>
    <label>ContactClassification Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Classifications Data (ContactClassification Account)</relationshipLabel>
    <relationshipName>Classifications_Data</relationshipName>
    <type>Lookup</type>
</CustomField>