force-app/main/default/objects/ClassificationData__c/fields/ContactClassificationTeacher_Number__c.field-meta.xml
<CustomField>
    <fullName>ContactClassificationTeacher_Number__c</fullName>
    <description>Contains the teacher number of the related contact, prior to deduplication. To ensure possible multiple teacher numbers for the same contact for Noordhoff are retained.</description>
    <label>ContactClassification Teacher Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>