force-app/main/default/objects/ClassificationData__c/fields/InstitutionNumber__c.field-meta.xml
<CustomField>
    <fullName>InstitutionNumber__c</fullName>
    <label>Institution number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>