force-app/main/default/objects/ClassificationData__c/fields/isHigherEducation__c.field-meta.xml
<CustomField>
    <fullName>isHigherEducation__c</fullName>
    <formula>ClassificationAttribute__r.isHigherEducation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Higher Education</label>
    <type>Checkbox</type>
</CustomField>