force-app/main/default/objects/ClassificationData__c/fields/isKindergarten__c.field-meta.xml
<CustomField>
    <fullName>isKindergarten__c</fullName>
    <formula>ClassificationAttribute__r.isKindergarten__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kindergarten</label>
    <type>Checkbox</type>
</CustomField>