force-app/main/default/objects/ClassificationData__c/fields/isPrimaryEducation__c.field-meta.xml
<CustomField>
    <fullName>isPrimaryEducation__c</fullName>
    <formula>ClassificationAttribute__r.isPrimaryEducation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Education</label>
    <type>Checkbox</type>
</CustomField>