force-app/main/default/objects/ClassificationData__c/fields/isSecondaryEducation__c.field-meta.xml
<CustomField>
    <fullName>isSecondaryEducation__c</fullName>
    <formula>ClassificationAttribute__r.isSecondaryEducation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Education</label>
    <type>Checkbox</type>
</CustomField>