force-app/main/default/objects/ClassificationData__c/fields/isVocationalEducation__c.field-meta.xml
<CustomField>
    <fullName>isVocationalEducation__c</fullName>
    <formula>ClassificationAttribute__r.isVocationalEducation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vocational Education</label>
    <type>Checkbox</type>
</CustomField>