force-app/main/default/objects/ClassificationData__c/fields/LocationNumber__c.field-meta.xml
<CustomField>
    <fullName>LocationNumber__c</fullName>
    <label>Location number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>