force-app/main/default/objects/ClassificationData__c/fields/SchoolYear__c.field-meta.xml
<CustomField>
    <fullName>SchoolYear__c</fullName>
    <label>School Year</label>
    <length>2</length>
    <type>Text</type>
</CustomField>