force-app/main/default/objects/ClassificationData__c/fields/TEMP_Import_Field__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Import_Field__c</fullName>
    <description>TO BE REMOVED AFTER ALL AGODI DATA IS IMPORTED!!!</description>
    <label>TEMP_Import_Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>