force-app/main/default/objects/ClassificationData__c/listViews/ContactClassifications.listView-meta.xml
<ListView>
    <fullName>ContactClassifications</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ClassificationAttributeName__c</columns>
    <columns>ClassificationAttributeValueName__c</columns>
    <columns>ClassificationAttributeSubValue__c</columns>
    <columns>ClassificationAttributeSubValueName__c</columns>
    <columns>isKindergarten__c</columns>
    <columns>isPrimaryEducation__c</columns>
    <columns>isSecondaryEducation__c</columns>
    <columns>isHigherEducation__c</columns>
    <columns>isVocationalEducation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Noordhoff</value>
    </filters>
    <label>Contact Classifications</label>
</ListView>